--- a/server_2/audio.html
+++ b/server_2/audio.html
@@ -12,7 +12,10 @@
 
     <header>
         <h1>Audio en HTML</h1>
+
     </header>
     
+    <audio src="/media/media/audio.mp3" controls autoplay loop></audio>
+
 </body>
 </html>
