--- a/server_2/web/index.html
+++ b/server_2/web/index.html
@@ -17,6 +17,7 @@
             <a href="/audio.html">Audio</a>
             <a href="/video.html">Video</a>
             <a href="formularios.html">Formularios</a>
+            <a href="otras_etiquetas.html">Formularios</a>
 
           </li>
         </ul>
