--- a/Modulo_3_CSS/Dia_8/ejercicio_2/www/index.html
+++ b/Modulo_3_CSS/Dia_8/ejercicio_2/www/index.html
@@ -10,9 +10,14 @@
   <body>
     <header>
       <h1>Vacas</h1>
-      <figure>
-        <img src="img/vacas_1.jpg" alt="Fotografia de dos vacas juntas" />
-      </figure>
+      <nav>
+          <ul>
+              <li><a href="#">Lorem Ipsum</a></li>
+              <li><a href="#">Lorem Ipsum</a></li>
+          </ul>
+      </nav>
+      <button>Comprar</button>
+        
     </header>
     <section id="Principal">
       <H1>LOREM IPSUM</H1>
@@ -36,10 +41,8 @@
       </p>
     </section>
     <section id="muestras">
-      <figure>
-        <a href="/www/form.html">
-            <button type="submit">Comprar</button>
-        </a>
+
+      <article class="muestra">
         <img src="img/vaca_1.jpeg" alt="Cara de vaca 1" />
         <h2>Vaca 1</h2>
         <p>
@@ -48,32 +51,38 @@
           iure excepturi cumque, mollitia veniam suscipit sint obcaecati quod
           voluptatum.
         </p>
+        <a href="/form.html">
+          <button type="submit">Comprar</button>
+        </a>
+      </article>
 
-        <a href="/www/form.html">
-            <button type="submit">Comprar</button>
-        </a>
-        <img src="img/vaca_4.jpeg" alt="Cara de vaca 4" />
-        <h2>Vaca 2</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem
-          molestias repellat inventore alias ipsa perferendis recusandae error
-          doloribus suscipit officia modi, ab velit consequatur, quas dolore
-          impedit. Enim, laboriosam officia.
+        <article class="muestra">
+         <img src="img/vaca_4.jpeg" alt="Cara de vaca 4" />
+         <h2>Vaca 2</h2>
+         <p>
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem
+         molestias repellat inventore alias ipsa perferendis recusandae error
+         doloribus suscipit officia modi, ab velit consequatur, quas dolore
+         impedit. Enim, laboriosam officia.
         </p>
-        <a href="/www/form.html">
-            <button type="submit">Comprar</button>
+        <a href="/form.html">
+         <button type="submit">Comprar</button>
         </a>
-        <img src="img/vaca_3.jpeg" alt="Cara de vaca 3" />
-        <h2>Vaca 3</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Exercitationem maxime dolor voluptatem magni alias officiis unde,
-          ipsam blanditiis iusto ipsum ab a ipsa vero distinctio quisquam
-          facere! Sint, consectetur architecto!
+       </article>
+
+        <article class="muestra">
+         <img src="img/vaca_3.jpeg" alt="Cara de vaca 3" />
+         <h2>Vaca 3</h2>
+         <p>
+         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem
+         maxime dolor voluptatem magni alias officiis unde, ipsam blanditiis
+         iusto ipsum ab a ipsa vero distinctio quisquam facere! Sint, consectetur
+         architecto!
         </p>
-      </figure>
+        <a href="/form.html"></a>
+         <button type="submit">Comprar</button>
+        </a>
+    </article>  
     </section>
-
   </body>
-  
 </html>
