ejercicio random people

--- a/Modulo_4_JS_2/dia_5/www/index.html
+++ b/Modulo_4_JS_2/dia_5/www/index.html
@@ -12,6 +12,6 @@
         <h1>Promises, async y await</h1>
     </header>
     
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/ejercico.js"></script>
 </body>
 </html>
